# literature-analyzer

./: .env.example  .gitignore  =4.3.0  README.md  app.py  packages.txt  pyproject.toml  requirements.txt
.streamlit/: config.toml
scripts/: build_windows.bat  init_db.py
src/: __init__.py  import_cnki.py  main.py
src/analyzers/: base.py  deep_analysis.py
src/analyzers/advanced/: advisor_stats.py  co_occurrence.py  institution_stats.py  text_processor.py  topic_modeling.py
src/analyzers/basic/: hotspot.py  keyword_cloud.py  yearly_trend.py
src/config/: defaults.yaml  settings.py
src/models/: base.py  crawl_session.py  paper.py
src/storage/: cache.py  paper_repo.py  repository.py
src/ui/: app.py  state.py
tests/: test_text_processor.py
